add initial type definitions, add a config file for our standard env variables etc

--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
   "name": "event-cast",
   "version": "0.1.0",
+  "description": "Weather application for outdoor meetup planning",
+  "keywords": [
+    "react",
+    "weather",
+    "visualization"
+  ],
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
@@ -11,9 +17,14 @@
     "@types/node": "^16.7.13",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
+    "axios": "^1.9.0",
+    "d3": "^7.9.0",
+    "date-fns": "^4.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.15.3",
+    "sass": "^1.89.0",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
